# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mqtt_spb_wrapper"
version = "1.0.0"
description = "MQTT Sparkplub B v1.0 Wrapper"
readme = "README.md"
authors = [{ name = "Javier FG", email = "info@jfg.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["feed", "reader", "tutorial"]
dependencies = [
    "paho_mqtt==1.6.1",
    "protobuf==3.20.1",
]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/realpython/reader"

# https://realpython.com/pypi-publish-python-package/